components/simple-server/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: app-3
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: simple-server
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elsimple-server
  namespace: gbenhaim
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-simple-server
    weight: null
status: {}
